--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "download-images": "node scripts/download-images.mjs",
+    "build": "npm run download-images && astro build",
     "preview": "astro preview"
   },
   "dependencies": {
     "astro": "^4.16.0",
     "@astrojs/tailwind": "^5.1.0",
     "@notionhq/client": "^2.2.0",
+    "@fontsource/inter": "^5.0.0",
+    "@fontsource/oswald": "^5.0.0",
+    "dotenv": "^16.4.0",
     "tailwindcss": "^3.4.0"
   }
 }
