--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "astro dev",
     "download-images": "node scripts/download-images.mjs",
-    "build": "npm run download-images && astro build",
+    "optimize-images": "node scripts/optimize-images.mjs",
+    "build": "npm run download-images && npm run optimize-images && astro build",
     "preview": "astro preview"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "@fontsource/inter": "^5.0.0",
     "@fontsource/oswald": "^5.0.0",
     "dotenv": "^16.4.0",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "sharp": "^0.33.0"
   }
 }
